# super-stt-qwen-asr

./: .gitignore  README.md  backend.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: inference.py  server.py
scripts/: build_bundle.sh
tests/: test_server.py
