# Dev environment for the Qwen3-ASR backend, managed with uv.
#
# This project is NOT pip-installed (the backend runs as scripts under app/);
# `[tool.uv] package = false` makes uv manage only the environment.
#
# The heavy ML stack (torch, qwen-asr) is provisioned ONLY in the shipped
# bundle by scripts/build_bundle.sh — it is deliberately absent from the dev
# env, because the contract tests drive a fake engine and never import torch.
# The light libraries the code imports directly (starlette, uvicorn, numpy) are
# declared here so the tests run and the type checker resolves them.

[project]
name = "super-stt-backend-qwen3-asr"
version = "0.1.0"
description = "Qwen3-ASR local speech-to-text backend for Super STT."
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.41",
    "uvicorn>=0.30",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "ty",
    "pytest-cov>=7.1.0",
    "httpx2>=2.4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415", "BLE001", "RUF100"]

[tool.ty.environment]
python-version = "3.11"
# app/ holds the importable modules (server.py imports inference); the tests
# add it to sys.path at runtime, so ty needs it on its search path too.
extra-paths = ["app"]
